Thu Sep 30 15:28:50 2010  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: Fix CrossProduct and
	  make it return a column vector.

	* src/geniustests.txt: add a test

	* help/C/gel-function-list.xml: note that the result is a column
	  vector

Thu Sep 09 22:47:54 2010  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.11

	* src/gnome-genius.desktop.in: add %U to command line

	* help/C/genius.xml: some minor updates and clarifications

Thu Sep 09 21:29:33 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/genius.c, src/calc.h, src/gnome-genius.c:  In a fit of
	  incredible evilness (or stupidity) somebody made <term.h>
	  #define buttons ... thinking buttons is an uncommon word.
	  Yaikes.  Wonder why it doesn't break on Fedora but it did break on
	  SuSE.  Anyway, thanks go to Stephan Hegel for hunting this one
	  down!

Wed Sep 08 00:48:15 2010  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.10

Wed Sep 08 00:47:50 2010  Jiri (George) Lebl <jirka@5z.com>

	* configure.in: require Gtk+ 2.14 and VTE 0.17.1

	* src/gnome-genius.c, src/graphing.c, ve/ve-miscui.c: fix some
	  sealing things.  Do note that we do not yet compile even without
	  deprecated stuff since gtkextra is full of it.  Also use some newer
	  things that required gtk+ 2.14 and vte 0.17.1

	* src/graphing.c: fix zooming in 2D plots when moving mouse
	  in any direction.

Mon Aug 30 22:33:08 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.h, ssrc/funclib.c, src/genius.c, src/gnome-genius.c:
	  update copyright string and make it translatable

Mon Aug 30 15:31:37 2010  Jiri (George) Lebl <jirka@5z.com>

	* help/C/genius.xml, help/C/gel-function-list.xml:
	  Hand apply some changes from Christian Kirbach
	  (christian.kirbach at googlemail dot com) to fix typos

	* lib/*/*.gel, src/funclib.c:  Fix some typos.  Fix spelling of the
	  function name AuxiliaryUnitMatrix!

Mon Aug 30 14:43:41 2010  Jiri (George) Lebl <jirka@5z.com>
